<resources>
	<string name="app_name">Weather</string>
	<string name="sunrise">Sunrise</string>
	<string name="sunset">Sunset</string>
	<string name="wind">Wind</string>
	<string name="pressure">Pressure</string>
	<string name="humidity">Humidity</string>
	<string name="something_went_wrong">Something went wrong</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="address">Address</string>
	<string name="last_updated_at">Last Updated At:</string>
	<string name="weather_icon">Weather Icon</string>
	<string name="map_icon">Map Icon</string>
</resources>