<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_gradient"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:gravity="center"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/addressBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="9"
				android:autofillHints="postalAddress"
				android:hint="@string/address"
				android:inputType="textPostalAddress"
				android:paddingStart="8dp"
				android:paddingEnd="8dp"
				android:textColor="#FFF"
				android:textSize="20sp" />

			<Space
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight=".5" />

			<ImageButton
				android:id="@+id/imageButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:contentDescription="@string/map_icon"
				android:tint="#FFF"
				app:srcCompat="@android:drawable/ic_dialog_map" />

		</LinearLayout>

		<TextView
			android:id="@+id/mainUpdated_at"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text=""
			android:textColor="#FFF"
			android:textSize="16sp" />
	</LinearLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginVertical="8dp"
				android:orientation="vertical">

				<TextView
					android:id="@+id/mainAddress"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text=""
					android:textColor="#FFF"
					android:textSize="32sp" />

				<ImageView
					android:id="@+id/mainStatusImage"
					android:layout_width="128dp"
					android:layout_height="128dp"
					android:layout_gravity="center"
					android:contentDescription="@string/weather_icon"
					tools:srcCompat="@drawable/placeholder" />

				<LinearLayout
					android:id="@+id/overviewContainer"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:id="@+id/mainStatus"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text=""
						android:textColor="#FFF"
						android:textSize="16sp" />

					<TextView
						android:id="@+id/temp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:fontFamily="sans-serif-thin"
						android:text=""
						android:textColor="#FFF"
						android:textSize="80sp" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:orientation="horizontal"
						android:padding="8dp"
						android:weightSum="5">

						<TextView
							android:id="@+id/temp_min"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="2"
							android:gravity="center"
							android:text=""
							android:textColor="#FFF" />

						<Space
							android:layout_width="wrap_content"
							android:layout_height="8dp"
							android:layout_weight="1" />

						<TextView
							android:id="@+id/temp_max"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="2"
							android:gravity="center"
							android:text=""
							android:textColor="#FFF" />
					</LinearLayout>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/detailsContainer"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:weightSum="3">

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="#3CF1EBF1"
							android:gravity="center"
							android:orientation="vertical"
							android:padding="8dp">

							<ImageView
								android:layout_width="25dp"
								android:layout_height="25dp"
								android:contentDescription="@string/sunrise"
								android:src="@drawable/sunrise"
								app:tint="#FFF" />

							<Space
								android:layout_width="wrap_content"
								android:layout_height="5dp" />

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/sunrise"
								android:textSize="12sp" />

							<TextView
								android:id="@+id/sunrise"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text=""
								android:textSize="14sp" />
						</LinearLayout>

						<Space
							android:layout_width="10dp"
							android:layout_height="wrap_content" />

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="#3CF1EBF1"
							android:gravity="center"
							android:orientation="vertical"
							android:padding="8dp">

							<ImageView
								android:layout_width="25dp"
								android:layout_height="25dp"
								android:contentDescription="@string/sunset"
								android:src="@drawable/sunset"
								app:tint="#FFFFFF" />

							<Space
								android:layout_width="wrap_content"
								android:layout_height="5dp" />

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/sunset"
								android:textSize="12sp" />

							<TextView
								android:id="@+id/sunset"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text=""
								android:textSize="14sp" />
						</LinearLayout>

						<Space
							android:layout_width="10dp"
							android:layout_height="wrap_content" />

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:background="#3CF1EBF1"
							android:gravity="center"
							android:orientation="vertical"
							android:padding="8dp">

							<ImageView
								android:layout_width="25dp"
								android:layout_height="25dp"
								android:contentDescription="@string/wind"
								android:src="@drawable/wind"
								app:tint="#FFFFFF" />

							<Space
								android:layout_width="wrap_content"
								android:layout_height="5dp" />

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/wind"
								android:textSize="12sp" />

							<TextView
								android:id="@+id/wind"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text=""
								android:textSize="14sp" />
						</LinearLayout>
					</LinearLayout>

					<Space
						android:layout_width="wrap_content"
						android:layout_height="10dp" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:weightSum="2">

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="#3CF1EBF1"
							android:gravity="center"
							android:orientation="vertical"
							android:padding="8dp">

							<ImageView
								android:layout_width="25dp"
								android:layout_height="25dp"
								android:contentDescription="@string/pressure"
								android:src="@drawable/pressure"
								app:tint="#FFFFFF" />

							<Space
								android:layout_width="wrap_content"
								android:layout_height="5dp" />

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/pressure"
								android:textSize="12sp" />

							<TextView
								android:id="@+id/pressure"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text=""
								android:textSize="14sp" />
						</LinearLayout>

						<Space
							android:layout_width="10dp"
							android:layout_height="wrap_content" />

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="#3CF1EBF1"
							android:gravity="center"
							android:orientation="vertical"
							android:padding="8dp">

							<ImageView
								android:layout_width="25dp"
								android:layout_height="25dp"
								android:contentDescription="@string/humidity"
								android:src="@drawable/humidity"
								app:tint="#FFFFFF" />

							<Space
								android:layout_width="wrap_content"
								android:layout_height="5dp" />

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/humidity"
								android:textSize="12sp" />

							<TextView
								android:id="@+id/humidity"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text=""
								android:textSize="14sp" />
						</LinearLayout>


					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="4dp"
				android:layout_marginEnd="16dp"
				android:layout_marginBottom="16dp"
				android:gravity="center"
				android:orientation="horizontal"
				android:weightSum="5">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="5dp"
					android:layout_weight="2"
					android:background="#3CF1EBF1"
					android:orientation="vertical"
					android:padding="2dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/subAddress1"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center"
							android:layout_weight="3"
							android:autoSizeMaxTextSize="20sp"
							android:autoSizeMinTextSize="16sp"
							android:gravity="center"
							android:text="" />

						<Space
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight=".25" />

						<ImageView
							android:id="@+id/subStatusImage1"
							android:layout_width="64dp"
							android:layout_height="64dp"
							android:layout_weight="1"
							android:padding="4dp"
							app:srcCompat="@drawable/placeholder" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1">

						<TextView
							android:id="@+id/subStatus1"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="center"
							android:text=""
							android:textColor="#FFF" />

						<TextView
							android:id="@+id/subTemp1"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:autoSizeMaxTextSize="16sp"
							android:autoSizeMinTextSize="12sp"
							android:fontFamily="sans-serif-thin"
							android:gravity="center"
							android:text=""
							android:textColor="#FFF" />
					</LinearLayout>
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="5dp"
					android:layout_weight="2"
					android:background="#3CF1EBF1"
					android:orientation="vertical"
					android:padding="2dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/subAddress2"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center"
							android:layout_weight="3"
							android:autoSizeMaxTextSize="20sp"
							android:autoSizeMinTextSize="16sp"
							android:gravity="center"
							android:text="" />

						<Space
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight=".25" />

						<ImageView
							android:id="@+id/subStatusImage2"
							android:layout_width="64dp"
							android:layout_height="64dp"
							android:layout_weight="1"
							android:padding="4dp"
							app:srcCompat="@drawable/placeholder" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1">

						<TextView
							android:id="@+id/subStatus2"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="center"
							android:text=""
							android:textColor="#FFF" />

						<TextView
							android:id="@+id/subTemp2"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:autoSizeMaxTextSize="16sp"
							android:autoSizeMinTextSize="12sp"
							android:fontFamily="sans-serif-thin"
							android:gravity="center"
							android:text=""
							android:textColor="#FFF" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>